--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -1,5 +1,6 @@
-body, h1, h3, p {
+body, h1, h3, p, form {
     margin: 0;
+    padding: 0;
 }
 
 #container-header {
@@ -32,7 +33,56 @@ nav {
 
 }
 
-#container-footer {
+
+footer {
     background-color: #2e948a;
-    height: 117px;
+    padding: 1% 2%;
+}
+
+#container-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-top: 53px;
+}
+
+
+
+
+
+
+#button-footer {
+    display: flex;
+    flex-direction: column;
+}
+
+
+#button-a {
+    font-size: 20px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border: 2px solid #fff;
+    border-radius: 62px;
+    padding: 12px 60px;
+    
+}
+
+#button-b {
+    font-size: 20px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border: 2px solid #fff;
+    border-radius: 62px;
+    padding: 12px 60px;
+    margin-top: 13px;
+}
+
+.menu-fo {
+    display: flex;
+    flex-direction: column;
+    margin-right: 5%;
+    text-align: left;
 }
