--- a/styles/cursos.css
+++ b/styles/cursos.css
@@ -3,16 +3,14 @@
     font-weight: bold;
     font-size: 60px;
     color: #FF4081;
-    margin-top: 198px;
-    margin-left: 82px;
+    margin-top: 14%;
+    margin-left: 6%;
 }
 
 #titulo-h3 {
     font-family: Ubuntu;
-    font-style: normal;
-    font-weight: normal;
     color: #555555;
-    margin-left: 82px;
+    margin-left: 6%
 }
 
 .titulo-card {
@@ -38,37 +36,37 @@
     text-decoration: none;
     background-color: #2E948A;
     border-radius: 52px;
-    padding: 10px 30px;
+    padding: 1% 5%;
     font-size: 20px;
     text-align: center;
 }
 
 #container-1 {
     display: flex;
-    margin-top: 95px;
+    margin-top: 7%;
     gap: 53px;
-    margin-left: 112px;
-    margin-right: 114px;
-    padding-bottom: 50px;
+    margin-left: 8%;
+    margin-right: 9%;
+    padding-bottom: 4%;
     border-bottom: 3px solid #C4C4C4;
 }
 
 #container-2 {
     display: flex;
-    margin-top: 95px;
+    margin-top: 7%;
     gap: 53px;
-    margin-left: 112px;
-    margin-right: 114px;
-    padding-bottom: 50px;
+    margin-left: 8%;
+    margin-right: 9%;
+    padding-bottom: 4%;
     border-bottom: 3px solid #C4C4C4;
     ;
 }
 
 #container-3 {
     display: flex;
-    margin-top: 95px;
+    margin-top: 7%;
     gap: 53px;
-    margin-left: 112px;
-    margin-right: 114px;
-    padding-bottom: 411px;
+    margin-left: 8%;
+    margin-right: 9%;
+    padding-bottom: 29%;
 }
