--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -18,7 +18,7 @@ body, h1, h3, p, form, ul, li, a, header, footer {
     align-items: center;
     height: 117px;
     margin-right: 7%;
-    
+
 }
 
 #nav-header img {
@@ -35,10 +35,12 @@ body, h1, h3, p, form, ul, li, a, header, footer {
 }
 
 .menu-item-link {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
     color: #fff;
     text-decoration: none;
     padding: 47px 15px;
-
 }
 
 
