--- a/styles/blog.css
+++ b/styles/blog.css
@@ -2,14 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 219px;
-    margin-left: 8%;
-    margin-bottom: 6%;
+    padding-left: 8%;
+    padding-bottom: 6%;
+    padding-top: 3%
 }
 
 #section-container-superior {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding-top: 8%;
     padding-left: 8%;
     gap: 120px;
@@ -19,6 +22,7 @@
 #section-container-central {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 120px;
     padding-top: 7%;
     padding-left: 8%;
@@ -28,6 +32,7 @@
 #section-container-inferior {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 120px;
     padding-top: 7%;
     padding-left: 8%;
