--- a/styles/post.css
+++ b/styles/post.css
@@ -1,6 +1,7 @@
 #container {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-bottom: 8%;
@@ -10,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 8%;
 }
 
@@ -31,13 +33,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.card img {
-    margin-bottom: 8%;
+.card-1 img {
+    margin-bottom: 6%;
 }
 
-.card p {
+.card-1 p {
     font-weight: 300;
     font-size: 18px;
     line-height: 21px;
@@ -76,6 +79,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     padding-top: 7%;
     padding-bottom: 7%;
     gap: 118px;
@@ -89,6 +93,7 @@
     line-height: 57px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     background-color: #F7F7F7;
     padding-top: 6%;
     color: #FF4081;
@@ -99,6 +104,7 @@
     font-size: 25px;
     line-height: 29px;
     color: #FF4081;
+    padding-top: 15%;
 }
 
 .paragrafos-central {
@@ -106,5 +112,6 @@
     font-size: 17px;
     line-height: 20px;
     text-align: center;
+    padding-top: 9%;
     color: #000000;
 }
