--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -8,8 +8,8 @@ body, h1, h3, p, form, ul, li, a, header, footer {
 
 #container-header {
     background-color: #2e948a;
-    height: 117px;
     width: 100%;
+    height: 117px;
 }
 
 #nav-header {
@@ -118,4 +118,150 @@ footer {
 #logo-footer {
     margin-left: 7%;
     margin-bottom: 1%;
+}
+
+@media (min-width: 280px) and (max-width: 767px) {
+    #container-header {
+        height: 50px;
+        width: 100%;
+    }
+
+    #nav-header {
+        height: 50px;
+    }
+
+    #nav-header img {
+        height: 50%;
+        width: 25%;
+    }
+
+
+    .menu-item-link {
+        font-size: 10px;
+        padding: 20px 7px;
+    }
+
+
+
+
+    #container-footer {
+        width: 100%;
+        height: 80px;
+    }
+
+    .menu-footer-item {
+        font-size: 15px;
+    }
+
+    #button-footer {
+        margin-right: 7%;
+    }
+
+    #button-a {
+        font-size: 15px;
+        border: 1px solid #fff;
+        padding: 1px 5px;
+
+    }
+
+    #button-b {
+        font-size: 15px;
+        border: 1px solid #fff;
+        padding: 1px 5px;
+    }
+
+    #nav-footer {
+        margin-right: 3%;
+    }
+
+    #logo-footer {
+        width: 25%;
+        margin-left: 5%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    #container-header {
+        height: 50px;
+        width: 100%;
+    }
+
+    #nav-header {
+        height: 50px;
+    }
+
+    #nav-header img {
+        height: 60%;
+        width: 20%;
+    }
+
+    .menu-item-link {
+        font-size: 15px;
+        padding: 20px 7px;
+    }
+
+
+
+
+
+
+    #container-footer {
+        width: 90%;
+        height: 67px;
+    }
+
+
+    .menu-footer-item-link {
+        padding-top: 5%;
+    }
+
+    .menu-footer-item {
+        color: #fff;
+        font-size: 20px;
+        text-decoration: none;
+    }
+
+
+
+
+    #button-footer {
+        display: flex;
+        flex-direction: column;
+        margin-right: 0%;
+
+    }
+
+
+    #button-a {
+        font-size: 15px;
+        border: 2px solid #fff;
+        border-radius: 62px;
+        padding: 2px 17px;
+
+    }
+
+    #button-b {
+        font-size: 15px;
+        border: 2px solid #fff;
+        border-radius: 62px;
+        padding: 2px 17px;
+        margin-top: 13px;
+    }
+
+    .menu-fo {
+        display: flex;
+        flex-direction: column;
+        margin-right: 5%;
+        text-align: left;
+    }
+
+    #nav-footer {
+        margin-right: 2%;
+    }
+
+    #logo-footer {
+        width: 25%;
+    }
+
+
 }
