--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -16,7 +16,7 @@ p, h1, h4 {
     justify-content: center;
     align-items: center;
     gap: 39px;
-    flex-wrap: wrap;
+
 }
 
 #titulo-superior {
@@ -31,7 +31,7 @@ p, h1, h4 {
     font-weight: 400;
     font-size: 27px;
     color: #555555;
-    margin-bottom: 38px;
+    margin-bottom: 8%;
 }
 
 .card-1 {
@@ -60,12 +60,12 @@ p, h1, h4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     margin-top: 5%;
     padding-top: 5%;
-    padding-bottom: 266px;
+    padding-bottom: 19%;
     gap: 118px;
-    background-color: #F7F7F7;;
+    background-color: #F7F7F7;
+    ;
 }
 
 .card-3 img {
@@ -97,7 +97,7 @@ p, h1, h4 {
     font-weight: 300;
     font-size: 17px;
     color: #000000;
-    margin-bottom: 41px;
+    margin-bottom: 13%;
 }
 
 .link-central {
@@ -120,11 +120,10 @@ p, h1, h4 {
 
 #section-central-2 {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
     margin: 10px auto;
     max-width: 1500px;
-    margin-bottom: 236px;
+    margin-bottom: 17%;
 }
 
 .card-6 {
@@ -146,7 +145,6 @@ p, h1, h4 {
     padding: 10px auto;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     gap: 9%;
     background-color: #F7F7F7;
 }
@@ -155,11 +153,12 @@ p, h1, h4 {
     font-family: Ubuntu;
     font-weight: 700;
     font-size: 37px;
-    padding-left: 128px;
+    padding-left: 9%;
     padding-top: 7%;
-    padding-bottom: 73px;
+    padding-bottom: 5%;
     color: #009688;
-    background-color: #F7F7F7;;
+    background-color: #F7F7F7;
+    ;
 }
 
 .titulo-central-4 {
@@ -191,4 +190,245 @@ p, h1, h4 {
     background-color: #F7F7F7;
     padding-top: 5%;
     padding-bottom: 3%;
+}
+
+@media (min-width: 280px) and (max-width: 767px) {
+
+
+    #section-superior {
+        margin-left: 10%;
+
+    }
+
+    .card-1 a {
+        font-size: 10px;
+        padding: 7px 5px;
+    }
+
+    .card-1 {
+        width: 75%;
+        height: 75%;
+        padding-top: 0;
+    }
+
+
+    #titulo-superior {
+        font-size: 14px;
+    }
+
+    #titulo-superior1 {
+        padding-top: 5%;
+        font-size: 11px;
+        margin-bottom: 15%;
+    }
+
+    .card-2 {
+        padding-top: 7%;
+    }
+
+    .card-2 img {
+        height: 75%;
+        width: 75%;
+    }
+
+    #section-central-1 {
+        gap: 40px;
+        padding-bottom: 11%;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+
+    #section-central-1 img {
+        display: none;
+    }
+
+    .titulos-central-1 {
+        font-size: 12px;
+    }
+
+    .paragrafos-central {
+        font-size: 9px;
+        margin-bottom: 27%;
+    }
+
+    .link-central {
+        font-size: 10px;
+        padding: 10px 7px;
+    }
+
+    #section-central-2 {
+        flex-direction: column;
+        margin-bottom: 2%;
+    }
+
+    #titulo-central-2 {
+        font-size: 20px;
+    }
+
+    .card-6 {
+        width: auto;
+    }
+
+    .card-6 img {
+        width: 15%;
+        height: 10%;
+    }
+
+    .card-6 p {
+        font-size: 15px;
+    }
+
+    #titulo-central-3 {
+        font-size: 17px;
+    }
+
+    .card-7 {
+        margin: 0 2%;
+    }
+
+    .card-7 img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .titulo-central-4 {
+        font-size: 15px;
+    }
+
+    .card-7 p {
+        display: none;
+    }
+
+    #section-central-3 {
+        gap: 1%;
+    }
+
+    #button {
+        padding-bottom: 10%;
+    }
+
+    #button-inferior {
+        font-size: 18px;
+        padding: 3px 0px;
+        text-align: center;
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 992px) {
+    #section-superior {
+        margin-left: 10%;
+
+    }
+
+    .card-1 a {
+        font-size: 21px;
+        padding: 7px 5px;
+    }
+
+    .card-1 {
+        width: 75%;
+        height: 75%;
+        padding-top: 0;
+    }
+
+
+    #titulo-superior {
+        font-size: 31px;
+    }
+
+    #titulo-superior1 {
+        padding-top: 0%;
+        font-size: 21px;
+        margin-bottom: 4%;
+    }
+
+    .card-2 {
+        padding-top: 7%;
+    }
+
+    .card-2 img {
+        height: 75%;
+        width: 75%;
+    }
+
+    #section-central-1 {
+        gap: 20px;
+        align-items: baseline;
+        padding-bottom: 11%;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+
+
+    .titulos-central-1 {
+        font-size: 20px;
+    }
+
+    .paragrafos-central {
+        font-size: 18px;
+        margin-bottom: 20%;
+    }
+
+    .link-central {
+        font-size: 18px;
+        padding: 10px 7px;
+    }
+
+    #section-central-2 {
+        flex-direction: column;
+        margin-bottom: 2%;
+    }
+
+    #titulo-central-2 {
+        font-size: 25px;
+    }
+
+    .card-6 {
+        width: auto;
+    }
+
+    .card-6 img {
+        width: 15%;
+        height: 10%;
+    }
+
+    .card-6 p {
+        font-size: 15px;
+    }
+
+    #titulo-central-3 {
+        font-size: 17px;
+    }
+
+    .card-7 {
+        margin: 0 2%;
+    }
+
+    .card-7 img {
+        width: 200px;
+        height: 150px;
+    }
+
+    .titulo-central-4 {
+        font-size: 20px;
+    }
+
+    .card-7 p {
+        display: none;
+    }
+
+    #section-central-3 {
+        gap: 1%;
+    }
+
+    #button {
+        padding-bottom: 10%;
+    }
+
+    #button-inferior {
+        font-size: 24px;
+        padding: 7px 15px;
+        text-align: center;
+    }
 }
