--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -1,47 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
 
-body, h1, h3, p, form, ul, li, a, header, footer {
+html {
+    font-size: 16px;
+}
+
+body, h1, h3, h4, p, form, ul, li, a, header, footer {
     margin: 0;
     padding: 0;
-    font-family: Ubuntu;
+    box-sizing: border-box;
+    font-family: 'Ubuntu';
 }
+
 
 #container-header {
     background-color: #2e948a;
-    width: 100%;
-    height: 117px;
+    padding: 20px;
+}
+
+.wrapper {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+header .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#logo-header {
+
 }
 
 #nav-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 117px;
-    margin-right: 7%;
-
-}
-
-#nav-header img {
-    margin-left: 7%;
-}
-
-#menu {
-    margin: 0;
-    padding: 0;
-}
-
-.menu-item {
     display: inline;
 }
 
-.menu-item-link {
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 23px;
+.link-nav {
     color: #fff;
     text-decoration: none;
-    padding: 47px 15px;
+    font-size: 1.25rem;
+    margin: 0 40px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
+
+
+
+
+
+
+
+
 
 
 footer {
